# FlotaV

./: .replit  README.md  README_DISTRIBUCION.md  analytics.py  app.py  auth.py  authentication.py  backup_manager.py  build_exe.py  cache_manager.py  config.yaml  database.py  database_standalone.py  documentation.py  empaquetar_aplicacion.py  enhanced_app.py  flota_vehicular.db  gestflota.spec  home.py  iniciar_aplicacion.bat  instrucciones_distribucion.md  launcher.py  logger.py  main.py  ocr_processor.py  pagination.py  pyproject.toml  replit.nix  requirements.txt  secure_database.py  send_message.py  setup_standalone.py  theme_manager.py  validators.py
.github/workflows/: codacy.yml  codeql.yml
